Fixed relative path

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -73,7 +73,7 @@
         <div class="row p-4">
             <div class="col-md-4 col-6">
                 <div class="card border-0">
-                    <img src="/images/t1-scout.jpeg" class="card-img-top">
+                    <img src="../images/t1-scout.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Scout Rifle</small>
                     </div>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t1-smg.jpeg" class="card-img-top">
+                    <img src="../images/t1-smg.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Compact SMG</small>
                     </div>
@@ -89,7 +89,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t1-shotgun.jpeg" class="card-img-top">
+                    <img src="../images/t1-shotgun.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Shotgun</small>
                     </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t1-pistol.jpeg" class="card-img-top">
+                    <img src="../images/t1-pistol.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Pistol</small>
                     </div>
@@ -105,7 +105,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t1-machinepistol.jpeg" class="card-img-top">
+                    <img src="../images/t1-machinepistol.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Machine Pistol</small>
                     </div>
@@ -113,7 +113,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t1-flare.jpeg" class="card-img-top">
+                    <img src="../images/t1-flare.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Flaregun</small>
                     </div>
@@ -131,7 +131,7 @@
         <div class="row p-5">
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-ak.jpeg" class="card-img-top">
+                    <img src="../images/t2-ak.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Assault Rifle</small>
                     </div>
@@ -139,7 +139,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-sport.jpeg" class="card-img-top">
+                    <img src="../images/t2-sport.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Sporting Carbine</small>
                     </div>
@@ -147,7 +147,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-battleR.jpeg" class="card-img-top">
+                    <img src="../images/t2-battleR.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Classic Battle Rifle</small>
                     </div>
@@ -155,7 +155,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-bullup.jpeg" class="card-img-top">
+                    <img src="../images/t2-bullup.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Classic Bullpup Rifle</small>
                     </div>
@@ -163,7 +163,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-lmg.jpeg" class="card-img-top">
+                    <img src="../images/t2-lmg.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Light Automatic Weapon</small>
                     </div>
@@ -171,7 +171,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-smg.jpeg" class="card-img-top">
+                    <img src="../images/t2-smg.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">SMG</small>
                     </div>
@@ -179,7 +179,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-combat.jpeg" class="card-img-top">
+                    <img src="../images/t2-combat.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Combat Shotgun</small>
                     </div>
@@ -187,7 +187,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-sniper.jpeg" class="card-img-top">
+                    <img src="../images/t2-sniper.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Sniper Rifle</small>
                     </div>
@@ -195,7 +195,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-pdw.jpeg" class="card-img-top">
+                    <img src="../images/t2-pdw.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Senjata PDW</small>
                     </div>
@@ -203,7 +203,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-compactS.jpeg" class="card-img-top">
+                    <img src="../images/t2-compactS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Compact Shotgun</small>
                     </div>
@@ -211,7 +211,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-dbS.jpeg" class="card-img-top">
+                    <img src="../images/t2-dbS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Double-Barreled Shotgun</small>
                     </div>
@@ -219,7 +219,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t2-revolver.jpeg" class="card-img-top">
+                    <img src="../images/t2-revolver.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Revolver</small>
                     </div>
@@ -237,7 +237,7 @@
         <div class="row p-5">
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-assault.jpeg" class="card-img-top">
+                    <img src="../images/t3-assault.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Assault Carbine</small>
                     </div>
@@ -245,7 +245,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-battleR.jpeg" class="card-img-top">
+                    <img src="../images/t3-battleR.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Battle Rifle</small>
                     </div>
@@ -253,7 +253,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-bullpup.jpeg" class="card-img-top">
+                    <img src="../images/t3-bullpup.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Bullpup Rifle</small>
                     </div>
@@ -261,7 +261,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-advanceC.jpeg" class="card-img-top">
+                    <img src="../images/t3-advanceC.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Advanced Combat Weapon</small>
                     </div>
@@ -269,7 +269,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-advanceS.jpeg" class="card-img-top">
+                    <img src="../images/t3-advanceS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Advanced SMG</small>
                     </div>
@@ -277,7 +277,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-specialS.jpeg" class="card-img-top">
+                    <img src="../images/t3-specialS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Special SMG</small>
                     </div>
@@ -285,7 +285,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-assaultS.jpeg" class="card-img-top">
+                    <img src="../images/t3-assaultS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Assault Shotgun</small>
                     </div>
@@ -293,7 +293,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-cross.jpeg" class="card-img-top">
+                    <img src="../images/t3-cross.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Crossbow</small>
                     </div>
@@ -301,7 +301,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-multiS.jpeg" class="card-img-top">
+                    <img src="../images/t3-multiS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Multi-Barreled Shotgun</small>
                     </div>
@@ -309,7 +309,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-repeatR.jpeg" class="card-img-top">
+                    <img src="../images/t3-repeatR.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Repeating Rifle</small>
                     </div>
@@ -317,7 +317,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/t3-thumper.jpeg" class="card-img-top">
+                    <img src="../images/t3-thumper.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Grenade Launcher</small>
                     </div>
@@ -335,7 +335,7 @@
         <div class="row p-5">
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/knives.jpeg" class="card-img-top">
+                    <img src="../images/knives.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Dual Knives</small>
                     </div>
@@ -343,7 +343,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/sickles.jpeg" class="card-img-top">
+                    <img src="../images/sickles.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Dual Sickles</small>
                     </div>
@@ -351,7 +351,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/cleaver.jpeg" class="card-img-top">
+                    <img src="../images/cleaver.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Duel Cleavers</small>
                     </div>
@@ -359,7 +359,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/sai.jpeg" class="card-img-top">
+                    <img src="../images/sai.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Dual Sai</small>
                     </div>
@@ -377,7 +377,7 @@
         <div class="row p-5">
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/machete.jpeg" class="card-img-top">
+                    <img src="../images/machete.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Machete</small>
                     </div>
@@ -385,7 +385,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/katana.jpeg" class="card-img-top">
+                    <img src="../images/katana.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Wakizashi</small>
                     </div>
@@ -393,7 +393,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/lobo.jpeg" class="card-img-top">
+                    <img src="../images/lobo.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Lobo</small>
                     </div>
@@ -401,7 +401,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/tomahawk.jpeg" class="card-img-top">
+                    <img src="../images/tomahawk.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Tomahawk</small>
                     </div>
@@ -409,7 +409,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/hammer.jpeg" class="card-img-top">
+                    <img src="../images/hammer.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Hammer</small>
                     </div>
@@ -417,7 +417,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/fireAxe.jpeg" class="card-img-top">
+                    <img src="../images/fireAxe.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Fire Axe</small>
                     </div>
@@ -425,7 +425,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/baton.jpeg" class="card-img-top">
+                    <img src="../images/baton.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Baton</small>
                     </div>
@@ -443,7 +443,7 @@
         <div class="row p-5">
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/heavyFire.jpeg" class="card-img-top">
+                    <img src="../images/heavyFire.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Heavy Fire Axe</small>
                     </div>
@@ -451,7 +451,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/bat.jpeg" class="card-img-top">
+                    <img src="../images/bat.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Baseball Bat</small>
                     </div>
@@ -459,7 +459,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/sword.jpeg" class="card-img-top">
+                    <img src="../images/sword.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Sword</small>
                     </div>
@@ -467,7 +467,7 @@
             </div>
             <div class="col-md-4 col-6 ">
                 <div class="card border-0">
-                    <img src="/images/sledge.jpeg" class="card-img-top">
+                    <img src="../images/sledge.jpeg" class="card-img-top">
                     <div class="card-body text-center">
                         <small class="card-title text-light">Sledgehammer</small>
                     </div>
