Initial weapon's page

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -68,12 +68,12 @@
 
     <div class="container mt-5">
         <div class="text-center">
-            <hi class="display-5 fst-italic text-white font-monospace">TIER I</hi>
+            <h1 class="display-5 fst-italic text-white font-monospace">TIER I</h1>
         </div>
         <div class="row p-4">
             <div class="col-md-4 col-6">
                 <div class="card border-0">
-                    <img src="../images/t1-scout.jpeg" class="card-img-top">
+                    <a href="t1scout.html"><img src="../images/t1-scout.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Scout Rifle</small>
                     </div>
@@ -126,7 +126,7 @@
 
     <div class="container mt-5">
         <div class="text-center">
-            <hi class="display-5 fst-italic text-white font-monospace">TIER II</hi>
+            <h1 class="display-5 fst-italic text-white font-monospace">TIER II</h1>
         </div>
         <div class="row p-5">
             <div class="col-md-4 col-6 ">
@@ -232,7 +232,7 @@
 
     <div class="container mt-5">
         <div class="text-center">
-            <hi class="display-5 fst-italic text-white font-monospace">TIER III</hi>
+            <h1 class="display-5 fst-italic text-white font-monospace">TIER III</h1>
         </div>
         <div class="row p-5">
             <div class="col-md-4 col-6 ">
@@ -330,7 +330,7 @@
 
     <div class="container mt-5">
         <div class="text-center">
-            <hi class="display-5 fst-italic text-white font-monospace">LIGHT MELEE</hi>
+            <h1 class="display-5 fst-italic text-white font-monospace">LIGHT MELEE</h1>
         </div>
         <div class="row p-5">
             <div class="col-md-4 col-6 ">
@@ -372,7 +372,7 @@
 
     <div class="container mt-5">
         <div class="text-center">
-            <hi class="display-5 fst-italic text-white font-monospace">MEDIUM MELEE</hi>
+            <h1 class="display-5 fst-italic text-white font-monospace">MEDIUM MELEE</h1>
         </div>
         <div class="row p-5">
             <div class="col-md-4 col-6 ">
@@ -438,7 +438,7 @@
 
     <div class="container mt-5">
         <div class="text-center">
-            <hi class="display-5 fst-italic text-white font-monospace">HEAVY MELEE</hi>
+            <h1 class="display-5 fst-italic text-white font-monospace">HEAVY MELEE</h1>
         </div>
         <div class="row p-5">
             <div class="col-md-4 col-6 ">
