Weapon's page layout #1

--- a/weapon_pages/t1scout.html
+++ b/weapon_pages/t1scout.html
@@ -66,7 +66,7 @@
 
     <!-- WEAPON CONTENT -->
     <div class="container">
-        <div class="row mt-5">
+        <div class="row my-5">
             <div class="col-md-6 col-12">
                 <div class="text-center"><img src="../images/t1-scout.jpeg" width="300px"></div>
             </div>
@@ -120,8 +120,8 @@
     <!-- CODE DIVISION -->
     <div class="container mt-5 weapon-perk">
         <div class="row text-center">
-            <div class="col-6">
-                <div class="row">
+            <div class="col-lg-6 col-12">
+                <div class="row my-5">
                     <h3 class="fst-italic text-white font-monospace mb-2">Unique Perks</h3>
                     <div class="col-3 px-0 d-flex flex-column align-items-center"> <img src="perks/wolfpack.jpeg"> <small class="text-light">Wolf Pack</small></div>
                     <div class="col-3 px-0 d-flex flex-column align-items-center"> <img src="perks/veteran2.jpeg"> <small class="text-light">Veteran II</small></div>
@@ -129,9 +129,9 @@
                     <div class="col-3 px-0 d-flex flex-column align-items-center"> <img src="perks/brainb.jpeg"> <small class="text-light">Brain Buster</small></div>
                 </div>
             </div>
-            <div class="col-6">
-                <div class="row">
-                    <h3 class="fst-italic text-white font-monospace mb-0">Common Perks</h3>
+            <div class="col-lg-6 col-12">
+                <div class="row my-5">
+                    <h3 class="fst-italic text-white font-monospace mb-2">Common Perks</h3>
                     <div class="col-3 px-0 d-flex flex-column align-items-center"> <img src="perks/custom-mag2.png"> <small class="text-light">Custom Mag II</small></div>
                     <div class="col-3 px-0 d-flex flex-column align-items-center"> <img src="perks/custom-round1.png"> <small class="text-light">Custom Rounds I</small></div>
                     <div class="col-3 px-0 d-flex flex-column align-items-center"> <img src="perks/custom-barrel.png"> <small class="text-light">Custom Barrel</small></div>
