--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -67,11 +67,11 @@
     <!-- Code DIVISON -->
 
     <div class="container mt-5">
-        <div class="text-center">
-            <h1 class="display-5 fst-italic text-white font-monospace">TIER I</h1>
-        </div>
-        <div class="row p-4">
-            <div class="col-md-4 col-6">
+        <div class="row p-4 justify-content-center">
+            <div class="text-center">
+                <h1 class="display-5 fst-italic text-white font-monospace mb-3">TIER I</h1>
+            </div>
+            <div class="col-md-4 col-6 d-flex justify-content-center">
                 <div class="card border-0">
                     <a href="t1scout.html"><img src="../images/t1-scout.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t1-smg.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t1-shotgun.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t1-pistol.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t1-machinepistol.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t1-flare.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -125,11 +125,11 @@
     <!-- Code DIVISON -->
 
     <div class="container mt-5">
-        <div class="text-center">
-            <h1 class="display-5 fst-italic text-white font-monospace">TIER II</h1>
-        </div>
         <div class="row p-5">
-            <div class="col-md-4 col-6 ">
+            <div class="text-center">
+                <h1 class="display-5 fst-italic text-white font-monospace mb-3">TIER II</h1>
+            </div>
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-ak.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -137,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-sport.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-battleR.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-bullup.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -161,7 +161,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-lmg.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -169,7 +169,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-smg.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -177,7 +177,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-combat.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -185,7 +185,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-sniper.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -193,7 +193,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-pdw.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -201,7 +201,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-compactS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -209,7 +209,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-dbS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -217,7 +217,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t2-revolver.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -231,11 +231,11 @@
     <!-- Code DIVISON -->
 
     <div class="container mt-5">
-        <div class="text-center">
-            <h1 class="display-5 fst-italic text-white font-monospace">TIER III</h1>
-        </div>
         <div class="row p-5">
-            <div class="col-md-4 col-6 ">
+            <div class="text-center">
+                <h1 class="display-5 fst-italic text-white font-monospace mb-3">TIER III</h1>
+            </div>
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-assault.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -243,7 +243,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-battleR.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -251,7 +251,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-bullpup.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -259,7 +259,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-advanceC.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -267,7 +267,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-advanceS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -275,7 +275,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-specialS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -283,7 +283,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-assaultS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -291,7 +291,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-cross.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -299,7 +299,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-multiS.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -307,7 +307,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-repeatR.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -315,7 +315,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/t3-thumper.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -329,11 +329,11 @@
     <!-- Code DIVISON -->
 
     <div class="container mt-5">
-        <div class="text-center">
-            <h1 class="display-5 fst-italic text-white font-monospace">LIGHT MELEE</h1>
-        </div>
         <div class="row p-5">
-            <div class="col-md-4 col-6 ">
+            <div class="text-center">
+                <h1 class="display-5 fst-italic text-white font-monospace mb-3">LIGHT MELEE</h1>
+            </div>
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/knives.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -341,7 +341,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/sickles.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -349,7 +349,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/cleaver.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -357,7 +357,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/sai.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -371,11 +371,11 @@
     <!-- Code DIVISON -->
 
     <div class="container mt-5">
-        <div class="text-center">
-            <h1 class="display-5 fst-italic text-white font-monospace">MEDIUM MELEE</h1>
-        </div>
         <div class="row p-5">
-            <div class="col-md-4 col-6 ">
+            <div class="text-center">
+                <h1 class="display-5 fst-italic text-white font-monospace mb-3">MEDIUM MELEE</h1>
+            </div>
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/machete.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -383,7 +383,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/katana.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -391,7 +391,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/lobo.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -399,7 +399,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/tomahawk.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -407,7 +407,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/hammer.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -415,7 +415,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/fireAxe.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -423,7 +423,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/baton.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -437,11 +437,11 @@
     <!-- Code DIVISON -->
 
     <div class="container mt-5">
-        <div class="text-center">
-            <h1 class="display-5 fst-italic text-white font-monospace">HEAVY MELEE</h1>
-        </div>
         <div class="row p-5">
-            <div class="col-md-4 col-6 ">
+            <div class="text-center">
+                <h1 class="display-5 fst-italic text-white font-monospace mb-3">HEAVY MELEE</h1>
+            </div>
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/heavyFire.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -449,7 +449,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/bat.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -457,7 +457,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/sword.jpeg" class="card-img-top">
                     <div class="card-body text-center">
@@ -465,7 +465,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-6 ">
+            <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
                     <img src="../images/sledge.jpeg" class="card-img-top">
                     <div class="card-body text-center">
