Complete complete-logic for page

--- a/weapon_pages/t1scout.html
+++ b/weapon_pages/t1scout.html
@@ -192,13 +192,13 @@
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
-                <input type="checkbox" name="commonPerk">
+                <input type="checkbox" name="commonPerk" id="nod3">
                 <div>Custom Barrel
                     <small class="d-block text-body-secondary"> +1 Accuracy, +10% Damage.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
-                <input type="checkbox" name="commonPerk">
+                <input type="checkbox" name="commonPerk" id="nod4">
                 <div>Ergonomics II
                     <small class="d-block text-body-secondary">+2 Handling, -10% Reloading speed.</small>
                 </div>
@@ -216,7 +216,7 @@
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
-                <input type="checkbox" name="commonPerk">
+                <input type="checkbox" name="commonPerk" id="nod7">
                 <div>Ammo Pouches
                     <small class="d-block text-body-secondary">+10% Max ammo.</small>
                 </div>
