Finalized and confirmed logic, completion for t1-smg

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -23,7 +23,7 @@
                 <div class="navbar-brand mx-5">WEAPONS</div>
             </div>
             <div>
-                <a href="/index.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
+                <a href="../index.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
             </div>
         </div>
     </nav>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t1-smg.jpeg" class="card-img-top">
+                    <a href="t1smg.html"><img src="../images/t1-smg.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Compact SMG</small>
                     </div>
