--- a/weapon_pages/t1smg.html
+++ b/weapon_pages/t1smg.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="style3.css">
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
-    <script src="script4.js" defer></script>
+    <script src="t1smg.js" defer></script>
 </head>
 
 <body>
