--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -73,7 +73,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center">
                 <div class="card border-0">
-                    <a href="t1scout.html"><img src="../images/t1-scout.jpeg" class="card-img-top"></a>
+                    <a href="#"><img src="../images/t1-scout.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Scout Rifle</small>
                     </div>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <a href="t1smg.html"><img src="../images/t1-smg.jpeg" class="card-img-top"></a>
+                    <a href="#"><img src="../images/t1-smg.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Compact SMG</small>
                     </div>
